bindings/rust/ufsecp-sys/src/lib.rs


    // ── Descriptors ───────────────────────────────────────────────────
    pub fn ufsecp_descriptor_parse(ctx: *mut ufsecp_ctx, descriptor: *const c_char, index: u32, key_out: *mut u8, addr_out: *mut c_char, addr_len: *mut usize) -> c_int;
    pub fn ufsecp_descriptor_address(ctx: *mut ufsecp_ctx, descriptor: *const c_char, index: u32, addr_out: *mut c_char, addr_len: *mut usize) -> c_int;

    // ── PSBT helpers ──────────────────────────────────────────────────
    pub fn ufsecp_psbt_sign_legacy(ctx: *mut ufsecp_ctx, sighash32: *const u8, privkey: *const u8, sighash_type: u8, sig_out: *mut u8, sig_len: *mut usize) -> c_int;
    pub fn ufsecp_psbt_sign_segwit(ctx: *mut ufsecp_ctx, sighash32: *const u8, privkey: *const u8, sighash_type: u8, sig_out: *mut u8, sig_len: *mut usize) -> c_int;
    pub fn ufsecp_psbt_sign_taproot(ctx: *mut ufsecp_ctx, sighash32: *const u8, privkey: *const u8, sighash_type: u8, aux_rand32: *const u8, sig_out: *mut u8, sig_len: *mut usize) -> c_int;
    pub fn ufsecp_psbt_derive_key(ctx: *mut ufsecp_ctx, master_xprv: *const u8, key_path: *const c_char, privkey_out: *mut u8) -> c_int;

    // ── GCS / Compact Block Filters ───────────────────────────────────
    pub fn ufsecp_gcs_build(key: *const u8, data: *const *const u8, data_sizes: *const usize, count: usize, filter_out: *mut u8, filter_len: *mut usize) -> c_int;
    pub fn ufsecp_gcs_match(key: *const u8, filter: *const u8, filter_len: usize, n_items: usize, item: *const u8, item_len: usize) -> c_int;
    pub fn ufsecp_gcs_match_any(key: *const u8, filter: *const u8, filter_len: usize, n_items: usize, query: *const *const u8, query_sizes: *const usize, query_count: usize) -> c_int;
}

// ── GPU ────────────────────────────────────────────────────────────────

/// Opaque GPU context type.
pub type ufsecp_gpu_ctx = c_void;

/// Size in bytes of one flat ECDSA SNARK witness record (eprint 2025/695).
pub const UFSECP_ECDSA_SNARK_WITNESS_BYTES: usize = 760;

/// Size in bytes of the BIP-352 GPU scan key plan.
pub const UFSECP_BIP352_SCAN_PLAN_BYTES: usize = 264;

extern "C" {
    // Discovery
    pub fn ufsecp_gpu_backend_count(backend_ids: *mut u32, max_ids: u32) -> u32;
    pub fn ufsecp_gpu_backend_name(backend_id: u32) -> *const c_char;
    pub fn ufsecp_gpu_is_available(backend_id: u32) -> c_int;
    pub fn ufsecp_gpu_device_count(backend_id: u32) -> u32;
    pub fn ufsecp_gpu_device_info(backend_id: u32, device_index: u32, info_out: *mut u8) -> c_int;

    // Lifecycle
    pub fn ufsecp_gpu_ctx_create(ctx_out: *mut *mut ufsecp_gpu_ctx, backend_id: u32, device_index: u32) -> c_int;
    pub fn ufsecp_gpu_ctx_destroy(ctx: *mut ufsecp_gpu_ctx);
    pub fn ufsecp_gpu_last_error(ctx: *const ufsecp_gpu_ctx) -> c_int;
    pub fn ufsecp_gpu_last_error_msg(ctx: *const ufsecp_gpu_ctx) -> *const c_char;

    // Batch ops
    pub fn ufsecp_gpu_generator_mul_batch(ctx: *mut ufsecp_gpu_ctx, scalars32: *const u8, count: usize, out_pubkeys33: *mut u8) -> c_int;
    pub fn ufsecp_gpu_ecdsa_verify_batch(ctx: *mut ufsecp_gpu_ctx, msg32: *const u8, pk33: *const u8, sig64: *const u8, count: usize, results: *mut u8) -> c_int;
    pub fn ufsecp_gpu_schnorr_verify_batch(ctx: *mut ufsecp_gpu_ctx, msg32: *const u8, pkx32: *const u8, sig64: *const u8, count: usize, results: *mut u8) -> c_int;
    pub fn ufsecp_gpu_ecdh_batch(ctx: *mut ufsecp_gpu_ctx, sk32: *const u8, pk33: *const u8, count: usize, secrets32: *mut u8) -> c_int;
    pub fn ufsecp_gpu_hash160_pubkey_batch(ctx: *mut ufsecp_gpu_ctx, pk33: *const u8, count: usize, h20: *mut u8) -> c_int;
    pub fn ufsecp_gpu_msm(ctx: *mut ufsecp_gpu_ctx, s32: *const u8, p33: *const u8, count: usize, out33: *mut u8) -> c_int;
    pub fn ufsecp_gpu_frost_verify_partial_batch(ctx: *mut ufsecp_gpu_ctx, z_i32: *const u8, d_i33: *const u8, e_i33: *const u8, y_i33: *const u8, rho_i32: *const u8, lambda_ie32: *const u8, negate_r: *const u8, negate_key: *const u8, count: usize, out_results: *mut u8) -> c_int;
    pub fn ufsecp_gpu_ecrecover_batch(ctx: *mut ufsecp_gpu_ctx, msg_hashes32: *const u8, sigs64: *const u8, recids: *const c_int, count: usize, out_pubkeys33: *mut u8, out_valid: *mut u8) -> c_int;

    // ZK batch
    pub fn ufsecp_gpu_zk_knowledge_verify_batch(ctx: *mut ufsecp_gpu_ctx, proofs64: *const u8, pubkeys65: *const u8, messages32: *const u8, count: usize, out_results: *mut u8) -> c_int;
    pub fn ufsecp_gpu_zk_dleq_verify_batch(ctx: *mut ufsecp_gpu_ctx, proofs64: *const u8, g_pts65: *const u8, h_pts65: *const u8, p_pts65: *const u8, q_pts65: *const u8, count: usize, out_results: *mut u8) -> c_int;
    pub fn ufsecp_gpu_bulletproof_verify_batch(ctx: *mut ufsecp_gpu_ctx, proofs324: *const u8, commitments65: *const u8, h_generator65: *const u8, count: usize, out_results: *mut u8) -> c_int;

    // BIP-324 AEAD batch
    pub fn ufsecp_gpu_bip324_aead_encrypt_batch(ctx: *mut ufsecp_gpu_ctx, keys32: *const u8, nonces12: *const u8, plaintexts: *const u8, sizes: *const u32, max_payload: u32, count: usize, wire_out: *mut u8) -> c_int;
    pub fn ufsecp_gpu_bip324_aead_decrypt_batch(ctx: *mut ufsecp_gpu_ctx, keys32: *const u8, nonces12: *const u8, wire_in: *const u8, sizes: *const u32, max_payload: u32, count: usize, plaintext_out: *mut u8, out_valid: *mut u8) -> c_int;

    // ZK: ECDSA SNARK witness batch (eprint 2025/695)
    pub fn ufsecp_gpu_zk_ecdsa_snark_witness_batch(
        ctx:           *mut ufsecp_gpu_ctx,
        msg_hashes32:  *const u8,
        pubkeys33:     *const u8,
        sigs64:        *const u8,
        count:         usize,
        out_witnesses: *mut u8,
    ) -> c_int;

    // BIP-352: Silent Payment (CPU plan utility + GPU batch)
    pub fn ufsecp_bip352_prepare_scan_plan(
        scan_privkey32: *const u8,
        plan264_out:    *mut u8,
    ) -> c_int;
    pub fn ufsecp_gpu_bip352_scan_batch(
        ctx:             *mut ufsecp_gpu_ctx,
        scan_privkey32:  *const u8,
        spend_pubkey33:  *const u8,
        tweak_pubkeys33: *const u8,
        n_tweaks:        usize,
        prefix64_out:    *mut u64,
    ) -> c_int;

    // Error
    pub fn ufsecp_gpu_error_str(err: c_int) -> *const c_char;
}


    // ── Version ────────────────────────────────────────────────────────
    pub fn ufsecp_version() -> u32;
    pub fn ufsecp_abi_version() -> u32;
    pub fn ufsecp_version_string() -> *const c_char;
    pub fn ufsecp_error_str(err: c_int) -> *const c_char;
    pub fn ufsecp_last_error(ctx: *const ufsecp_ctx) -> c_int;
    pub fn ufsecp_last_error_msg(ctx: *const ufsecp_ctx) -> *const c_char;

    // ── Key ops ────────────────────────────────────────────────────────
    pub fn ufsecp_seckey_verify(ctx: *const ufsecp_ctx, privkey: *const u8) -> c_int;
    pub fn ufsecp_seckey_negate(ctx: *mut ufsecp_ctx, privkey: *mut u8) -> c_int;
    pub fn ufsecp_seckey_tweak_add(ctx: *mut ufsecp_ctx, privkey: *mut u8, tweak: *const u8) -> c_int;
    pub fn ufsecp_seckey_tweak_mul(ctx: *mut ufsecp_ctx, privkey: *mut u8, tweak: *const u8) -> c_int;
    pub fn ufsecp_pubkey_create(ctx: *mut ufsecp_ctx, privkey: *const u8, pubkey33: *mut u8) -> c_int;
    pub fn ufsecp_pubkey_create_uncompressed(ctx: *mut ufsecp_ctx, privkey: *const u8, pubkey65: *mut u8) -> c_int;
    pub fn ufsecp_pubkey_parse(ctx: *mut ufsecp_ctx, input: *const u8, input_len: usize, pubkey33: *mut u8) -> c_int;
    pub fn ufsecp_pubkey_xonly(ctx: *mut ufsecp_ctx, privkey: *const u8, xonly32: *mut u8) -> c_int;

    // ── ECDSA ──────────────────────────────────────────────────────────
    pub fn ufsecp_ecdsa_sign(ctx: *mut ufsecp_ctx, msg32: *const u8, privkey: *const u8, sig64: *mut u8) -> c_int;
    pub fn ufsecp_ecdsa_verify(ctx: *mut ufsecp_ctx, msg32: *const u8, sig64: *const u8, pubkey33: *const u8) -> c_int;
    pub fn ufsecp_ecdsa_sig_to_der(ctx: *mut ufsecp_ctx, sig64: *const u8, der: *mut u8, der_len: *mut usize) -> c_int;
    pub fn ufsecp_ecdsa_sig_from_der(ctx: *mut ufsecp_ctx, der: *const u8, der_len: usize, sig64: *mut u8) -> c_int;

    // ── Recovery ───────────────────────────────────────────────────────
    pub fn ufsecp_ecdsa_sign_recoverable(ctx: *mut ufsecp_ctx, msg32: *const u8, privkey: *const u8, sig64: *mut u8, recid: *mut c_int) -> c_int;
    pub fn ufsecp_ecdsa_recover(ctx: *mut ufsecp_ctx, msg32: *const u8, sig64: *const u8, recid: c_int, pubkey33: *mut u8) -> c_int;

    // ── Schnorr ────────────────────────────────────────────────────────
    pub fn ufsecp_schnorr_sign(ctx: *mut ufsecp_ctx, msg32: *const u8, privkey: *const u8, aux_rand: *const u8, sig64: *mut u8) -> c_int;
    pub fn ufsecp_schnorr_verify(ctx: *mut ufsecp_ctx, msg32: *const u8, sig64: *const u8, pubkey_x: *const u8) -> c_int;

    // ── ECDH ───────────────────────────────────────────────────────────
    pub fn ufsecp_ecdh(ctx: *mut ufsecp_ctx, privkey: *const u8, pubkey33: *const u8, secret32: *mut u8) -> c_int;
    pub fn ufsecp_ecdh_xonly(ctx: *mut ufsecp_ctx, privkey: *const u8, pubkey33: *const u8, secret32: *mut u8) -> c_int;
    pub fn ufsecp_ecdh_raw(ctx: *mut ufsecp_ctx, privkey: *const u8, pubkey33: *const u8, secret32: *mut u8) -> c_int;

    // ── Hashing ────────────────────────────────────────────────────────
    pub fn ufsecp_sha256(data: *const u8, len: usize, digest32: *mut u8) -> c_int;
    pub fn ufsecp_hash160(data: *const u8, len: usize, digest20: *mut u8) -> c_int;
    pub fn ufsecp_tagged_hash(tag: *const c_char, data: *const u8, len: usize, digest32: *mut u8) -> c_int;

    // ── Addresses ──────────────────────────────────────────────────────
    pub fn ufsecp_addr_p2pkh(ctx: *mut ufsecp_ctx, pubkey33: *const u8, network: c_int, addr: *mut c_char, addr_len: *mut usize) -> c_int;
    pub fn ufsecp_addr_p2wpkh(ctx: *mut ufsecp_ctx, pubkey33: *const u8, network: c_int, addr: *mut c_char, addr_len: *mut usize) -> c_int;
    pub fn ufsecp_addr_p2tr(ctx: *mut ufsecp_ctx, xonly32: *const u8, network: c_int, addr: *mut c_char, addr_len: *mut usize) -> c_int;

    // ── WIF ────────────────────────────────────────────────────────────
    pub fn ufsecp_wif_encode(ctx: *mut ufsecp_ctx, privkey: *const u8, compressed: c_int, network: c_int, wif: *mut c_char, wif_len: *mut usize) -> c_int;
    pub fn ufsecp_wif_decode(ctx: *mut ufsecp_ctx, wif: *const c_char, privkey32: *mut u8, compressed: *mut c_int, network: *mut c_int) -> c_int;

    // ── BIP-32 ─────────────────────────────────────────────────────────
    pub fn ufsecp_bip32_master(ctx: *mut ufsecp_ctx, seed: *const u8, seed_len: usize, key82: *mut u8) -> c_int;
    pub fn ufsecp_bip32_derive(ctx: *mut ufsecp_ctx, parent82: *const u8, index: u32, child82: *mut u8) -> c_int;
    pub fn ufsecp_bip32_derive_path(ctx: *mut ufsecp_ctx, master82: *const u8, path: *const c_char, key82: *mut u8) -> c_int;
    pub fn ufsecp_bip32_privkey(ctx: *mut ufsecp_ctx, key82: *const u8, privkey32: *mut u8) -> c_int;
    pub fn ufsecp_bip32_pubkey(ctx: *mut ufsecp_ctx, key82: *const u8, pubkey33: *mut u8) -> c_int;

    // ── Taproot ────────────────────────────────────────────────────────
    pub fn ufsecp_taproot_output_key(ctx: *mut ufsecp_ctx, internal_x: *const u8, merkle_root: *const u8, output_x: *mut u8, parity: *mut c_int) -> c_int;
    pub fn ufsecp_taproot_tweak_seckey(ctx: *mut ufsecp_ctx, privkey: *const u8, merkle_root: *const u8, tweaked32: *mut u8) -> c_int;
    pub fn ufsecp_taproot_verify(ctx: *mut ufsecp_ctx, output_x: *const u8, parity: c_int, internal_x: *const u8, merkle_root: *const u8, mr_len: usize) -> c_int;

    // ── Pedersen ───────────────────────────────────────────────────────
    pub fn ufsecp_pedersen_commit(ctx: *mut ufsecp_ctx, value: *const u8, blinding: *const u8, commitment33: *mut u8) -> c_int;
    pub fn ufsecp_pedersen_verify(ctx: *mut ufsecp_ctx, commitment33: *const u8, value: *const u8, blinding: *const u8) -> c_int;
}

// ── GPU ────────────────────────────────────────────────────────────────

/// Opaque GPU context type.
pub type ufsecp_gpu_ctx = c_void;
